# kiloo

./: .clang-tidy  .clangd  CMakeLists.txt  program.cpp
core/: editor.hpp  extensions.cpp  extensions.hpp  main.cpp  terminal.hpp  tui.cpp  tui.hpp
