cmake_minimum_required(VERSION 3.28)
project(kiloo LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(SRCFILES program.cpp)
add_executable(main ${SRCFILES})
